# browser-agent-nvidia

./: .gitignore  MVP_QUICKSTART.md  README.md  TRAINING_PLAN.md  browser_agent_mvp_spec.docx.txt  description.txt  implementation_plan.txt  log.txt  main.py  pyproject.toml  reproduce_config_error.py  reproduce_processor_error.py  requirements-tensorrt.txt  run_demo.sh  verify_mlx.py
docs/: ARCHITECTURE.md  NEXT_STEPS.md  RESEARCH_PROPOSAL.md
logs/demo_task_run/: traj_1770575178.json  traj_1770575488.json  traj_1770575695.json
scripts/: build_engine.py  start_server.sh
src/: main.py
src/agent/: action_parser.py  agent_runtime.py
src/browser_interaction/: action_executor.py  session_manager.py
src/evaluation/: __init__.py  goal_interpreter.py  goal_spec.py  success_checker.py
src/observation/: dom_snapshotter.py  visual_capture.py
src/policy/: adapter_layer.py  mlx_policy.py  multimodal_policy.py  nim_policy.py  remote_vllm_policy.py  tensorrt_policy.py  transformers_policy.py
src/recorder/: human_recorder.py
src/safety/: checkpoint_manager.py
src/sdft/: enrichment.py  sdft_module.py  sdft_trainer_mlx.py
src/server/: adapter_manager.py  api.py  trainer_worker.py
src/shared/: schemas.py
src/utils/: config.py  file_download.py  trajectory_logger.py  trajectory_uploader.py
tests/: test_action_executor.py  test_action_parser.py  test_agent.py  test_integration.py  test_observation.py  test_policy.py  test_safety.py  test_sdft.py  test_session_manager.py
